tests/paczka2/big_fuzzy/66764414.err
Error in line 2: wQggJNM A122 8,31
Error in line 7: wQggJNM A122 38,7
Error in line 8: wQggJNM S761 50,0
Error in line 13: A122 A122 ",3
Error in line 11: wQggJNM A648 1,6
Error in line 19: tIfHMT S761 47,1
Error in line 23: QrFJ A648 62,7
Error in line 28: bR9UFJ S761 91,2
Error in line 34: wq7 A648 65,8
Error in line 39: wq7 S761 41,9
Error in line 30: bR9UFJ A122 97,1
Error in line 45: tIfHMT A565 45,1
Error in line 49: wQggJNM A122 87,7
Error in line 53: wQggJNM A648 94,4
Error in line 43: bR9UFJ S761 95,4
Error in line 55: wQggJNM A122 65,0
Error in line 66: wQggJNM S761 18/,6
Error in line 59: bR9UFJ A122 85,2
Error in line 73: A122 S761 13,3
Error in line 61: wQggJNM S761 40,0
Error in line 76: A122 A648 48,3
Error in line 78: NUgHn07 S761 55,6
Error in line 86: A122 A565 95,87
Error in line 88: A122 A122 94,2
Error in line 95: tIfHMT A565 1,6
Error in line 84: NUgHn07 A122 26,2
Error in line 99: NUgHn07 A648 63,6
Error in line 101: NUgHn07 A565 25,4
Error in line 114: bR9UFJ S761 48,7
Error in line 108: QrFJ A648 97,9
Error in line 122: tIfHMT S761 6,0
Error in line 123: tIfHMT A565 26,2
Error in line 127: tIfHMT A122 69,6
Error in line 129: tIfHMT S761 97,8
Error in line 131: bR9UFJ A122 33,7
Error in line 139: bR9UFJ A648 43,2
Error in line 143: bR9UFJ A122 19,5
Error in line 144: bR9UFJ A648 93,5
Error in line 147: bR9UFJ A122 55,7
Error in line 128: wQggJNM S761 84,7
Error in line 148: bR9UFJ A648 99,3
Error in line 153: wq7 S761 32,5
Error in line 164: NUgHn07 S761 10,9
Error in line 151: A122 A648 366,8
Error in line 180: QrFJ A122 11,4
Error in line 192: wQggJNM A122 22,5
Error in line 179: tIfHMT S761 91,9
Error in line 198: QrFJ A122 37,1
Error in line 197: bR9UFJ A565 37,8
Error in line 196: wQggJNM A648 73,4
Error in line 206: NUgHn07 A64  96,6
Error in line 208: NUgHn07 A648 114,0
Error in line 203: bR9UFJ A648 39,8
Error in line 225: bR9UFJ A122 92,37
Error in line 224: QrFJ S761 99,5
Error in line 232: bR9UFJ A122 129,9
Error in line 241: wQggJNM A122 87,4
Error in line 244: wQggJNM S761 91,4
